[package]
name = "mqtt_5"
version = "0.1.1"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A library for reading and writing MQTT 5.0 packets"
license = "MIT"
keywords = ["MQTT", "Read", "Write", "Packet"]
repository = "https://github.com/vectorizer-labs/mqtt_5"

[dependencies]
packattack = "0.1.0"
packattack-derive = "0.3.1"
bitreader_async = "0.2.0"

[dependencies.failure]
version = "0.1.6"

[dependencies.failure_derive]
version = "0.1.6"