[package]
name = "mqtt_5"
version = "0.1.1"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"
description = "A library for reading and writing MQTT 5.0 packets"
license = "MIT"
keywords = ["MQTT", "Read", "Write", "Packet"]
repository = "https://github.com/vectorizer-labs/mqtt_5"

[dependencies]
packattack = {path = "C:\\Users\\Ethan\\Desktop\\packattack"}

[dependencies.failure]
version = "0.1.6"

[dev-dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[profile.bench]
opt-level = 3